Hide pseudo sinks when user has no hosted domain.

This change prevents users without a hosted domain (e.g. @gmail.com users) from
seeing the "Add a hangout" pseudo sink in the MR dialog filter view. Trying to
create a named hangout for them will always fail.

BUG=607333
R=amp@chromium.org, apacible@chromium.org

Review-Url: https://codereview.chromium.org/1920293004
Cr-Commit-Position: refs/heads/master@{#390266}

Former-commit-id: b8906da25102968ee173acbb234728902ae4bb03